@@ -44,7 +44,9 @@
  *
  * NB: stirlerr(n/2) & stirlerr((n+1)/2) are called from dt(x,n) for all real n > 0 ;
  *     stirlerr(x) from gammafn(x) when |x| > 10,  2|x| is integer, but |x| is *not* in {11:50}
- *     stirlerr(x) from dpois_raw(x, lam) for any x > 0  which itself is called by many!
+ *     stirlerr(x) from dpois_raw(x, lam) for any x > 0  which itself is called by many,
+ *                                        including pgamma(), hence ppois(), ..
+
  *     stirlerr(n), stirlerr(x), stirlerr(n-x) from binom_raw(x, n, ..) for all possible 0 < x < n
  */
 
@@ -56,6 +58,19 @@ double attribute_hidden stirlerr(double n)
 #define S2 0.00079365079365079365079365  /* 1/1260 */
 #define S3 0.000595238095238095238095238 /* 1/1680 */
 #define S4 0.0008417508417508417508417508/* 1/1188 */
+#define S5 0.0019175269175269175269175262 // 691/360360
+#define S6 0.0064102564102564102564102561 // 1/156
+#define S7 0.029550653594771241830065352  // 3617/122400
+#define S8 0.17964437236883057316493850   // 43867/244188
+#define S9 1.3924322169059011164274315    // 174611/125400
+#define S10 13.402864044168391994478957 // 77683/5796
+#define S11 156.84828462600201730636509 // 236364091/1506960
+#define S12 2193.1033333333333333333333 // 657931/300
+#define S13 36108.771253724989357173269 // 3392780147/93960
+#define S14 691472.26885131306710839498 // 1723168255201/2492028
+#define S15 15238221.539407416192283370 // 7709321041217/505920
+#define S16 382900751.39141414141414141 // 151628697551/396
+/* #define S17 10882266035.784391089015145 // 26315271553053477373/2418179400 */
 
 /*
   exact values for 0, 0.5, 1.0, 1.5, ..., 14.5, 15.0.
@@ -95,16 +110,43 @@ double attribute_hidden stirlerr(double n)
     };
     double nn;
 
-    if (n <= 15.0) {
+    if (n <= 23.5) {
 	nn = n + n;
-	if (nn == (int)nn) return(sferr_halves[(int)nn]);
-	return(lgammafn(n + 1.) - (n + 0.5)*log(n) + n - M_LN_SQRT_2PI);
-    }
+	if (n <= 15. && (nn == (int)nn)) return sferr_halves[(int)nn];
+	// else:
+	if (n <= 5.25) {
+	    if(n >= 1.) { // "MM2"; slightly more accurate than direct form
+		double l_n = log(n);	      // ldexp(u, -1) == u/2
+		return lgamma(n) + n*(1 - l_n) + ldexp(l_n - M_LN_2PI, -1);
+	    }
+	    else // n < 1
+		return lgamma1p(n) - (n + 0.5)*log(n) + n - M_LN_SQRT_2PI;
+	}
+	// else  5.25 < n <= 23.5
+	nn = n*n;
+	if (n > 12.8)	return (S0-(S1-(S2-(S3-(S4-(S5 -S6/nn)/nn)/nn)/nn)/nn)/nn)/n;		// k = 7
+	if (n > 12.3)	return (S0-(S1-(S2-(S3-(S4-(S5-(S6 -S7/nn)/nn)/nn)/nn)/nn)/nn)/nn)/n;	// k = 8
+	if (n >  8.9)	return (S0-(S1-(S2-(S3-(S4-(S5-(S6-(S7 -S8/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/n;	// k = 9
+	/* if (n >  7.9)	return (S0-(S1-(S2-(S3-(S4-(S5-(S6-(S7-(S8 -S9/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/n; skip k = 10 */
+	if (n >  7.3)	return (S0-(S1-(S2-(S3-(S4-(S5-(S6-(S7-(S8-(S9-S10/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/n; // 11
+	/* if (n >  6.5)	return (S0-(S1-(S2-(S3-(S4-(S5-(S6-(S7-(S8-(S9-(S10-S11/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/n; skip k=12*/
+	if (n >  6.6)	return (S0-(S1-(S2-(S3-(S4-(S5-(S6-(S7-(S8-(S9-(S10-(S11-S12/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/n;
+	/* if (n >  5.7)	return (S0-(S1-(S2-(S3-(S4-(S5-(S6-(S7-(S8-(S9-(S10-(S11-(S12-S13/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/n; skip k= 14 */
+	if (n >  6.1)	return (S0-(S1-(S2-(S3-(S4-(S5-(S6-(S7-(S8-(S9-(S10-(S11-(S12-(S13-S14/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/n; // k = 15
+	/* ....		return (S0-(S1-(S2-(S3-(S4-(S5-(S6-(S7-(S8-(S9-(S10-(S11-(S12-(S13-(S14-S15/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/n;
+	 * skip order k=16 : never "good" for double prec
+	/* 6.1 >= n > 5.25 */
+	return (S0-(S1-(S2-(S3-(S4-(S5-(S6-(S7-(S8-(S9-(S10-(S11-(S12-(S13-(S14-(S15-S16/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/n;
+	/* return (S0-(S1-(S2-(S3-(S4-(S5-(S6-(S7-(S8-(S9-(S10-(S11-(S12-(S13-(S14-(S15-(S16-S17/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/nn)/n; */
 
-    nn = n*n;
-    if (n>500) return((S0-S1/nn)/n);
-    if (n> 80) return((S0-(S1-S2/nn)/nn)/n);
-    if (n> 35) return((S0-(S1-(S2-S3/nn)/nn)/nn)/n);
-    /* 15 < n <= 35 : */
-    return((S0-(S1-(S2-(S3-S4/nn)/nn)/nn)/nn)/n);
+     } else { // n > 23.5
+	nn = n*n;
+	if (n > 15.7e6)	return S0/n;
+	if (n > 6180)	return (S0 -S1/nn)/n;
+	if (n > 205)    return (S0-(S1 -S2/nn)/nn)/n;
+	if (n > 86)	return (S0-(S1-(S2 -S3/nn)/nn)/nn)/n;
+	if (n > 27)	return (S0-(S1-(S2-(S3 -S4/nn)/nn)/nn)/nn)/n;
+	/* 23.5 < n <= 27 */
+	                return (S0-(S1-(S2-(S3-(S4 -S5/nn)/nn)/nn)/nn)/nn)/n;
+    }
 }
